@@ -15,8 +15,11 @@ Revision history for Perl extension Net::SSLeay.
     Fixed complaints unders some windows compilers about cast from pointer to integer of
     different size. Suggested by kmx.
     Added thread safety and dynamic locking. This should complete thread
-    safety work, making Net::SSLay completely thread-safe. Patches by kind
+    safety work, making Net::SSLeay completely thread-safe. Patches by kind
     assistance of kmx.
+    Improvements to openssl backwards compatibility. Now build with versions
+    back to 0.9.6. With extreme thanks to kmx.
+    Improvements to documentation, thanks to kmx.
 
 1.42	 2011-10-03
     Fixed incorrect documentation of how to enable CRL checking. Patched
